<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main"
    android:orientation="vertical"
    >

    <include layout="@layout/navigation_header_layout" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:background="#ffffff"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/ctLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <LinearLayout
                android:id="@+id/lnTitle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="6"
                app:layout_constraintStart_toStartOf="@id/ctLayout"
                app:layout_constraintTop_toTopOf="@id/ctLayout"
                tools:ignore="MissingConstraints"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="10dp"
                    android:text="@string/ti_u"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints,RtlSymmetry"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="45dp"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    >

                    <EditText
                        android:id="@+id/edtTitle"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:background="@null"
                        android:backgroundTint="#ededed"
                        android:backgroundTintMode="src_in"
                        android:imeOptions="actionDone"
                        android:inputType="text"
                        android:textColor="#313131"
                        tools:ignore="Autofill,LabelFor,MissingConstraints"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"
                        tools:ignore="MissingConstraints"
                        />

                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/lnThem"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="6"
                app:layout_constraintStart_toStartOf="@id/ctLayout"
                app:layout_constraintTop_toBottomOf="@id/lnTitle"
                tools:ignore="MissingConstraints"
                >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:gravity="center_vertical|end"
                    android:paddingEnd="10dp"
                    android:text="@string/th_m_t_m_i"
                    android:textStyle="bold"
                    tools:ignore="MissingConstraints,RtlSymmetry"
                    />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:orientation="vertical"
                    >

                    <LinearLayout
                        android:id="@+id/btnAddTV"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_border_conner_orange"
                        android:orientation="horizontal"
                        tools:ignore="Autofill,LabelFor,MissingConstraints,UselessParent"
                        >

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:paddingStart="10dp"
                            android:text="@string/th_m"
                            tools:ignore="RtlSymmetry"
                            />

                        <ImageView
                            android:layout_width="36dp"
                            android:layout_height="36dp"
                            android:padding="10dp"
                            android:src="@drawable/ic_themtv"
                            tools:ignore="ContentDescription"
                            />

                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#ededed"
                app:layout_constraintTop_toBottomOf="@id/lnThem"
                tools:ignore="MissingConstraints"
                />

            <LinearLayout
                android:id="@+id/LnHead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:orientation="horizontal"
                android:weightSum="5"
                app:layout_constraintStart_toStartOf="@id/ctLayout"
                app:layout_constraintTop_toBottomOf="@id/lnThem"
                tools:ignore="DisableBaselineAlignment,MissingConstraints"
                >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="2"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical|end"
                        android:text="@string/t_m_i"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"
                        tools:ignore="MissingConstraints"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="46dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="3"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:gravity="center_vertical"
                        android:text="@string/n_i_dung"
                        android:textStyle="bold"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"
                        tools:ignore="MissingConstraints"
                        />

                </LinearLayout>


            </LinearLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/ctLayout"
                app:layout_constraintStart_toStartOf="@id/ctLayout"
                app:layout_constraintTop_toBottomOf="@id/LnHead"
                >

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvTuVung"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="49dp"
                    android:paddingStart="10dp"
                    android:paddingTop="10dp"
                    android:paddingEnd="10dp"
                    />

                <LinearLayout
                    android:id="@+id/lnDelete"
                    android:layout_width="match_parent"
                    android:layout_height="49dp"
                    android:layout_gravity="bottom"
                    android:background="@drawable/bg_button_dialog"
                    android:orientation="vertical"
                    android:visibility="gone"
                    >

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#ededed"
                        tools:ignore="MissingConstraints"
                        />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:padding="14dp"
                        android:src="@drawable/ic_trash"
                        tools:ignore="ContentDescription"
                        />

                </LinearLayout>
            </FrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>